--- a/src/components/motor_remap/body.html
+++ b/src/components/motor_remap/body.html
@@ -1,8 +1,9 @@
 <div class="component" style="display:flex; height:100%; flex-flow:column;">
     <h3 i18n="dialogMotorRemapTitle" style="margin-bottom: 20px"></h3>
-    <div class="componentContent" id="dialogMotorRemapMain" style="flex-grow: 1;">
-        <canvas id="motorRemapCanvas" style="width:100%; height:100%;">
+    <div class="componentContent" id="dialogMotorRemapMain" style="display:flex; height:100%; flex-flow:column;">
+        <canvas id="motorRemapCanvas" style="width:100%; height:100%; flex-grow: 1;">
         </canvas>
+        <h4 i18n="dialogMotorClickOnMotor"></h3>
     </div>
     <div class="componentContent" id="dialogMotorRemapWarning">
         <div class="notice">
