--- a/src/components/motor_remap/body.html
+++ b/src/components/motor_remap/body.html
@@ -1,9 +1,9 @@
 <div class="component" style="display:flex; height:100%; flex-flow:column;">
-    <h3 i18n="dialogMotorRemapTitle" style="margin-bottom: 20px"></h3>
+    <h3 i18n="motorsRemapDialogTitle" style="margin-bottom: 20px"></h3>
     <div class="componentContent" id="dialogMotorRemapMain" style="display:flex; height:100%; flex-flow:column;">
         <canvas id="motorRemapCanvas" style="width:100%; height:100%; flex-grow: 1;">
         </canvas>
-        <h4 i18n="dialogMotorClickOnMotor"></h3>
+        <h4 id="motorRemapActionHint"></h3>
     </div>
     <div class="componentContent" id="dialogMotorRemapWarning">
         <div class="notice">
@@ -12,7 +12,7 @@
             <span class="motorsEnableTestMode" i18n="motorsEnableControl"></span>
         </div>
         <div class="buttons">
-            <a href="#" id="dialogMotorRemapAgreeButton"  class="regular-button" i18n="dialogMotorRemapAgree"></a>
+            <a href="#" id="dialogMotorRemapAgreeButton"  class="regular-button" i18n="motorRemapDialogAgree"></a>
         </div>
     </div>
 </div>
