--- a/src/components/motor_remap/body.html
+++ b/src/components/motor_remap/body.html
@@ -5,8 +5,10 @@
         </canvas>
         <div id="motorRemapActionPanel">
             <h4 id="motorRemapActionHint"></h4>
-            <a href="#" id="dialogMotorRemapSave" class="regular-button right" i18n="dialogMotorRemapSave"></a>
-            <a href="#" id="dialogMotorRemapStartOver" class="regular-button right" i18n="dialogMotorRemapStartOver"></a>
+        </div>
+        <div id="motorRemapSaveStartOverButtonsPanel">
+            <a href="#" id="motorsRemapDialogSave" class="regular-button left" i18n="motorsRemapDialogSave"></a>
+            <a href="#" id="motorsRemapDialogStartOver" class="regular-button left" i18n="motorsRemapDialogStartOver"></a>
         </div>
     </div>
     <div class="componentContent" id="dialogMotorRemapWarning">
@@ -20,7 +22,7 @@
                     <span class="motorsEnableTestMode motorsRemapDialogRiskNoticeText" i18n="motorsRemapDialogUnderstandRisks"></span>
                 </div>
             </div>
-            <div class="motorsRemapDialogRExplanationText" i18n="motorsRemapDialogRExplanation"></div>
+            <div class="motorsRemapDialogRExplanationText" i18n="motorsRemapDialogExplanations"></div>
         </div>
         <div class="buttons">
             <a href="#" id="dialogMotorRemapAgreeButton" class="regular-button" i18n="motorRemapDialogAgree"></a>
