--- a/src/components/motor_remap/styles.css
+++ b/src/components/motor_remap/styles.css
@@ -1,48 +1,41 @@
 .motorRemapComponent {
-    border-bottom: 1px solid var(--accent);
     display:flex;
     height:100%;
     flex-flow:column;
 }
 
-.motorRemapComponentHeader
-{
+.motorRemapComponentHeader {
     border-bottom: 1px solid var(--accent);
     margin-bottom: 10px;
     padding-bottom: 12px;
 }
 
-#dialogMotorRemapMainContent
-{
+#dialogMotorRemapMainContent {
     display:flex;
     height:100%;
     flex-flow:column;
 }
 
-#dialogMotorRemapWarning
-{
+#dialogMotorRemapWarning {
     display:flex;
     height:100%;
     flex-flow:column;
 }
 
-#motorRemapCanvas
-{
+#motorRemapCanvas {
     width:100%;
-    height:100%;
     flex-grow: 1;
 }
 
 #motorRemapActionPanel {
-    height: 58px;
+    height: 46px;
 }
 
 #dialogMotorRemapSave {
     margin-right: 0px;
 }
 
-.motorsRemapToggleParentContainer
-{
+.motorsRemapToggleParentContainer {
     display: flex;
     margin-bottom: 1.5em;
     margin-top: 1.5em;
@@ -53,26 +46,27 @@
     display: inline-block;
 }
 
-.motorsRemapToggleNarrow
-{
+.motorsRemapToggleNarrow {
     margin-right: 12px;
     display: flex;
     align-items: center;
 }
 
-.motorsRemapToggleWide
-{
+.motorsRemapToggleWide {
     flex: 1;
 }
 
-.motorsRemapDialogRiskNoticeText
-{
+.motorsRemapDialogRiskNoticeText {
     font-size: 1.2em;
 }
 
-.motorsRemapDialogRExplanationText
-{
+.motorsRemapDialogRExplanationText {
     font-size: 1.0em;
     margin-bottom: 1.5em;
     margin-top: 1.5em;
+}
+
+#motorRemapSaveStartOverButtonsPanel {
+    position: absolute;
+    bottom: 4px;
 }
