--- a/src/css/tabs/motors.css
+++ b/src/css/tabs/motors.css
@@ -23,6 +23,22 @@
     margin-bottom: 0px;
 }
 
+.tab-motors #dialogMotorOutputReorder {
+    width: 400px;
+    height:440px
+;}
+
+.tab-motors #dialogMotorOutputReorderContentWrapper {
+    display: flex;
+    flex-flow: column;
+    width: 100%;
+    height: 100%;
+}
+
+.tab-motors #dialogMotorOutputReorderContent {
+    flex-grow: 1;
+}
+
 .tab-motors .mixerPreview img {
     width: 120px;
     height: 120px;
